[bugfix] fix router
